crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/03_empty_do.tm
-- expect: TM2008
do {}
